# notebooks

./: .gitignore  LICENSE  README.md  pyproject.toml
math/: Entropy.ipynb  MapReduce.ipynb
ml/: Clustering.ipynb  Compare ImageDataGenerator and tf.data.ipynb  Convolutions.ipynb  Correlation matrix visualization.ipynb  DimensionalityReduction.ipynb  Dropout.ipynb  Investigate inception v3 different vectors.ipynb  Keras MNIST.ipynb  Kernel density estimation.ipynb  Linear Regression with JAX.ipynb  Linear Regression.ipynb  MLE.ipynb  Matrix cheatsheet.ipynb  Numpy tricks.ipynb  PCA.ipynb  Reading text files.ipynb  Tensorflow.ipynb  Tensorflow2.ipynb  attendees.txt
python/: Basics.ipynb  Debugging.ipynb  Generators.ipynb  Itertools.ipynb  Rendering a template from OS environment.ipynb
