[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0"
numpy = "^1.16"
scipy = "^1.2"
seaborn = "^0.9.0"
pandas = "^0.24.1"
ipdb = "^0.12.0"
pixiedust = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
