[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
jupyter = "^1.0"
jax = "^0"
jaxlib = "^0"
scipy = "^1"
seaborn = "^0.11"
pandas = "^1.4"
Pillow = "^9.0"
tensorflow_hub = "^0.12"
scikit-learn = "^1.0.2"
optax = "^0.1.1"
umap-learn = "^0.5.2"
hdbscan = "^0.8.28"
pynndescent = "^0.5.6"
trimap = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
